# lensfun

./: .appveyor.yml  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  GNUmakefile  README  README.md  ac.py  appveyor.yml  buildpackages.sh  calibrate.py  config.mak  configure  debug-configure.sh  django.wsgi  lenslist.html  lenslist.md  manage.py  process_upload.py  settings.py  tibs.py  vignetting.pto  vignetting.pto.mk  vignetting.py  vignetting2.py  vignetting_first.pto.mk  vignetting_second.pto.mk
.github/workflows/: clang-tidy.yml  cmake-linux.yml  cmake-macos.yml  cmake-msys2.yml  cmake-windows.yml  cmake.yml  lenslist.yml  make-lenslist.yml  release.yml  static.yml
CMakeModules/: FindGLIB2.cmake
apps/: CMakeLists.txt  g-lensfun-update-data  g-update-lensfun-data  lensfun-add-adapter  lensfun-convert-lcp  lensfun-update-data  pyproject.toml.in  setup.py.in  update-lensfun-data
apps/lensfun/: __init__.py.in
apps/lenstool/: .clang-tidy  auxfun.h  image.cpp  image.h  lenstool.cpp  rgbpixel.h
berlios-archive/: bugs.xml  features.xml  patches.xml
calibration/: settings.py  urls.py  views.py  wsgi.py
cmake/modules/: CodeCoverage.cmake  FindGLIB2.cmake
data/brand-db/: README.md  (+12 more)
debian/: changelog  control  copyright  liblensfun-bin.dirs  liblensfun-bin.install  liblensfun-bin.manpages  liblensfun-data1.install  liblensfun-dev.install  liblensfun-doc.install  liblensfun1.install  rules  watch
docs/: CMakeLists.txt  adobe-lens-profile.txt  cc-by-sa-3.0.txt  docs.mak  doxyfile.in.cmake  footer.html  lensfun-manual.css  make-release-0.3.x.txt  manual-doc.conf  manual-main.txt  mathjaxConfiguration.js  mounts.txt
docs/calibration_tutorial/: lens.cpp.patch  lens_calibration_tutorial.rst
docs/example/: tfun.cpp
docs/lens-calibration/: .htaccess  lens-calibration.html  lens-distortion.html  lens-tca.html  lens-vignetting.html
docs/man/: README  g-lensfun-update-data.1.rst  g-update-lensfun-data.1  g-update-lensfun-data.1.rst  lensfun-add-adapter.1  lensfun-add-adapter.1.rst  lensfun-convert-lcp.1.rst  lensfun-update-data.1.rst  update-lensfun-data.1  update-lensfun-data.1.rst
docs/website/: README.md  _config.yml  calibration.md  development.md  faq.md  index.md  lenslist.md  news.md  styles.css  usage.md  usage2.md  welcome.md
docs/website/_includes/: footer.html  header.html  navigation.html  top-navigation.html
docs/website/_layouts/: default.html
docs/website/_plugins/: sorted_for.rb
docs/website/_posts/changelogs/: 2013-10-20-Release-0.2.8-Changelog.md  2014-09-28-Release-0.3.0-Changelog.md  2014-09-30-Release-0.3.0-Changelog.md  2015-05-10-Release-0.3.1-Changelog.md  2015-11-16-Release-0.3.2-Changelog.md  2018-06-29-Release-0.3.95-Changelog.md  Upcoming-Release-Changelog.md
docs/website/_posts/lenslist/: 2014-09-30-Lenslist-0.3.0.md  2015-05-10-Lenslist-0.3.1.md  2015-11-16-Lenslist-0.3.2.md
docs/website/_posts/news/: 2012-06-23-Release-0.2.6.md  2012-12-13-New-release-is-on-its-way.md  2013-02-10-Lensfun-0.2.7.md  2013-06-23-New-website.md  2013-07-20-Release-0.2.8.md  2013-10-20-Release-0.2.8.md  2014-04-03-Sourceforge.md  2014-09-28-Release-0.3.0.md  2014-09-30-Release-0.3.0.md  2015-05-10-Release-0.3.1.md  2015-11-16-Release-0.3.2.md  2018-06-29-Release-0.3.95.md  2019-02-16-State-and-future.md  Release-0.2.9.md
docs/website/calibration-tutorial/: docs.css  lens-calibration.html  lens-distortion.html  lens-tca.html  lens-vignetting.html
include/: config.h
libs/: CMakeLists.txt
libs/auxfun/: CMakeLists.txt  auxfun.mak  image.cpp
libs/lensfun/: .clang-tidy  CMakeLists.txt  auxfun.cpp  camera.cpp  cpuid.cpp  database.cpp  lens.cpp  lensfun.mak  lensfun.pc.cmake  lensfun.pc.in  lensfunprv.h  mod-color-sse.cpp  mod-color-sse2.cpp  mod-color.cpp  mod-coord-sse.cpp  mod-coord.cpp  mod-pc.cpp  mod-subpix.cpp  modifier.cpp  mount.cpp
libs/lensfun/legacy/: CMakeLists.txt  camera.cpp  database.cpp  legacy-auxfun.cpp  legacy-cpuid.cpp  legacy-lens.cpp  legacy-mod-color-sse.cpp  legacy-mod-color-sse2.cpp  legacy-mod-color.cpp  legacy-mod-coord-sse.cpp  legacy-mod-coord.cpp  legacy-mod-subpix.cpp  legacy-modifier.cpp  legacy_lensfun.h  legacy_lensfunprv.h  mount.cpp
libs/lensfun/legacy/include/lensfun/: config.h.in.cmake  lensfun.h.in
libs/lensfun/legacy/windows/: auxfun.cpp  mathconstants.h
libs/lensfun/windows/: auxfun.cpp
libs/regex/: CMakeLists.txt  README  regerror.c  regex.mak  tre-match-approx.c  tre-match-utils.h
sourceforge-archive/: bugs.json  features.json
tests/: .clang-tidy  CMakeLists.txt  README.md  common_code.hpp  test_auxfun.cpp  test_database.cpp  test_lens.cpp  test_lffuzzystrcmp.cpp  test_modifier.cpp  test_modifier_color.cpp  test_modifier_color_old.cpp  test_modifier_coord_affinity.cpp  test_modifier_coord_centering.cpp  test_modifier_coord_centering_old.cpp  test_modifier_coord_distortion.cpp  test_modifier_coord_distortion_old.cpp  test_modifier_coord_geometry.cpp  test_modifier_coord_geometry_old.cpp  test_modifier_coord_perspective_correction.cpp  test_modifier_coord_perspective_correction_old.cpp  test_modifier_coord_regression.cpp  test_modifier_coord_scale.cpp  test_modifier_coord_scale_old.cpp  test_modifier_coord_tiny_image.cpp  test_modifier_coord_tiny_image_old.cpp  test_modifier_old.cpp  test_modifier_performance.cpp  test_modifier_regression.cpp  test_modifier_regression_old.cpp  test_modifier_subpix.cpp  test_modifier_subpix_old.cpp  test_mount_c_api.cpp
tests/deprecated/: CMakeLists.txt  test_database_old.cpp  test_modifier_color_old.cpp  test_modifier_coord_centering_old.cpp  test_modifier_coord_distortion_old.cpp  test_modifier_coord_geometry_old.cpp  test_modifier_coord_perspective_correction_old.cpp  test_modifier_coord_scale_old.cpp  test_modifier_coord_tiny_image_old.cpp  test_modifier_old.cpp  test_modifier_regression_old.cpp  test_modifier_subpix_old.cpp
tests/example/: example.c  example.mak
tests/spline/: spline.py
tests/tfun/: tfun.cpp  tfun.mak
tests/tmod/: tmod.cpp  tmod.mak
tests/trwxml/: trwxml.cpp  trwxml.mak
tools/: lenslist.py
(+195 files in other folders)
